Copy SchedulingPolicy and CleanPodPolicy for RunPolicy
